--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <meta name="author" content="Hydro-Spaw">
     <title>Hydro-Spaw | Usługi Hydrauliczne i Spawalnicze</title>
 
+    <!-- Weryfikacja Google -->
+    <meta name="google-site-verification" content="vCyVDrUEFfa7lK6EwcfFywwI26yDGJY_qNFPXKYlrQU" />
+
     <!-- Favicon -->
     <link rel="icon" href="images/favicon.png" type="image/png"> <!-- Zmień ścieżkę do swojego pliku favicon -->
 
@@ -248,4 +251,3 @@
     </script>
 </body>
 </html>
-google-site-verification: googlee5dc31de149696e7.html
