--- a/index.html
+++ b/index.html
@@ -8,11 +8,8 @@
     <meta name="author" content="Hydro-Spaw">
     <title>Hydro-Spaw | Usługi Hydrauliczne i Spawalnicze</title>
 
-    <!-- Weryfikacja Google -->
-    <meta name="google-site-verification" content="vCyVDrUEFfa7lK6EwcfFywwI26yDGJY_qNFPXKYlrQU" />
-
     <!-- Favicon -->
-    <link rel="icon" href="images/favicon.png" type="image/png"> <!-- Zmień ścieżkę do swojego pliku favicon -->
+    <link rel="icon" href="images/favicon.png" type="image/png">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -26,20 +23,23 @@
             color: #333;
         }
         .navbar {
-            padding: 5px 0;
+            padding: 10px 0;
         }
         .navbar-brand img {
-            height: 80px;
+            height: 70px;
         }
         .hero-section {
             background: url('images/huj.jpg') no-repeat center center/cover;
             color: #fff;
             text-align: center;
-            padding: 150px 20px;
+            padding: 100px 20px;
         }
         .hero-section h1 {
-            font-size: 3.5rem;
+            font-size: 2.5rem;
             font-weight: bold;
+        }
+        .hero-section p {
+            font-size: 1.2rem;
         }
         .services-section .card {
             transition: transform 0.3s ease;
@@ -48,7 +48,7 @@
             transform: translateY(-10px);
         }
         .services-section img {
-            height: 200px;
+            height: 180px;
             object-fit: cover;
         }
         .contact-section {
@@ -114,6 +114,25 @@
         }
         .contact-section .contact-details {
             padding-top: 20px;
+        }
+
+        /* Responsywność */
+        @media (max-width: 768px) {
+            .hero-section h1 {
+                font-size: 2rem;
+            }
+            .hero-section p {
+                font-size: 1rem;
+            }
+            .services-section img {
+                height: 150px;
+            }
+            .navbar-brand img {
+                height: 60px;
+            }
+            .contact-section .col-md-6 {
+                margin-bottom: 30px;
+            }
         }
     </style>
 </head>
