--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                         <img src="images/firma3.jpg" class="card-img-top" alt="Serwis">
                         <div class="card-body">
                             <h5 class="card-title">Serwis i konserwacja</h5>
-                            <p class="card-text">Zajmujemy się serwisem instalacji sanitarnych.</p>
+                            <p class="card-text">Zajmujemy się serwisem i konserwacją instalacji sanitarnych.</p>
                         </div>
                     </div>
                 </div>
