--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Hydro-Spaw - profesjonalne usługi hydrauliczne i spawalnicze. Najlepsza jakość i niezawodność.">
-    <meta name="keywords" content="hydraulika, usługi spawalnicze, Hydro-Spaw, Przemysław Sułkowski">
+    <meta name="description" content="Hydro-Spaw to firma z doświadczeniem w usługach hydraulicznych i spawalniczych. Oferujemy kompleksowe usługi na terenie powiatu limanowskiego w Małopolsce oraz całej Polski. Kontakt: 666 062 948">
+    <meta name="keywords" content="hydraulika, usługi spawalnicze, spawanie rur, Limanowa, instalacje hydrauliczne, konserwacja instalacji, Hydro-Spaw">
     <meta name="author" content="Hydro-Spaw">
     <title>Hydro-Spaw | Usługi Hydrauliczne i Spawalnicze</title>
 
@@ -161,7 +161,7 @@
     <header class="hero-section" data-aos="fade-up">
         <div class="container">
             <h1>Profesjonalne Usługi Hydrauliczne i Spawalnicze</h1>
-            <p class="lead">Solidność, doświadczenie i najwyższa jakość wykonania.</p>
+            <p class="lead">Dostępne w powiecie limanowskim w Małopolsce oraz na terenie całej Polski.</p>
             <a href="#services" class="btn btn-primary btn-lg">Poznaj nasze usługi</a>
         </div>
     </header>
@@ -172,7 +172,7 @@
             <div class="row align-items-center">
                 <div class="col-md-6">
                     <h2>O nas</h2>
-                    <p>Firma <strong>Hydro-Spaw</strong> ma swoją historię sięgającą kilku lat wstecz. Założyciel, który przez siedem lat prowadził firmę o tej samej nazwie, zdobył zaufanie wielu klientów na rynku usług hydraulicznych i spawalniczych. Po zakończeniu działalności firmy, postanowiono odziedziczyć jej nazwę i wrócić na rynek z nową energią. Dziś <strong>Hydro-Spaw</strong> to firma, która stawia na solidność, wysoką jakość i niezawodność usług. Zespół firmy to specjaliści, którzy każdego dnia dążą do dostarczenia najlepszych rozwiązań dla swoich klientów. Dzięki doświadczeniu, pasji i zaangażowaniu, firma kontynuuje tradycje, oferując usługi na najwyższym poziomie.</p>
+                    <p>Firma <strong>Hydro-Spaw</strong> oferuje kompleksowe usługi hydrauliczne i spawalnicze. Specjalizujemy się w montażu, naprawach oraz konserwacji instalacji hydraulicznych i spawalniczych. Działamy na terenie powiatu limanowskiego w Małopolsce, jak również świadczymy usługi na terenie całej Polski. Gwarantujemy najwyższą jakość, profesjonalizm i solidność. Założyciel firmy, Przemysław Sułkowski, posiada wieloletnie doświadczenie w branży.</p>
                 </div>
                 <div class="col-md-6">
                     <img src="images/firma5.jpg" alt="O nas" class="img-fluid rounded" data-aos="fade-left">
@@ -242,9 +242,9 @@
             <div class="col-md-6">
                 <div class="contact-details">
                     <h5>Dane kontaktowe</h5>
-                    <p><strong>Telefon:</strong> 666 062 948</p>
-                    <p><strong>Adres:</strong> Stronie 292, 34-604 Przyszowa</p>
-                    <p><strong>Email:</strong> <a href="mailto:hydro.spaw.zoo@gmail.com">hydro.spaw.zoo@gmail.com</a></p>
+                    <p><i class="fas fa-phone-alt"></i> <strong>Telefon:</strong> 666 062 948</p>
+                    <p><i class="fas fa-map-marker-alt"></i> <strong>Adres:</strong> Stronie 292, 34-604 Przyszowa</p>
+                    <p><i class="fas fa-envelope"></i> <strong>Email:</strong> <a href="mailto:hydro.spaw.zoo@gmail.com">hydro.spaw.zoo@gmail.com</a></p>
                 </div>
             </div>
         </div>
