--- a/index.html
+++ b/index.html
@@ -64,35 +64,6 @@
             color: #fff;
             text-decoration: none;
         }
-        .reviews-section {
-            background-color: #f8f9fa;
-            padding: 50px 0;
-        }
-        .reviews-section .review {
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            margin-bottom: 20px;
-        }
-        .review .stars {
-            color: gold;
-        }
-        .rating {
-            display: flex;
-            gap: 5px;
-            color: #ffc107;
-        }
-        .guarantee-section {
-            background-color: #f8f9fa;
-            padding: 50px 0;
-        }
-        .guarantee-section .card {
-            background-color: #fff;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            border-radius: 8px;
-            padding: 20px;
-        }
         .contact-info-bar {
             background-color: #23272b;
             color: #fff;
@@ -150,7 +121,6 @@
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="#about">O nas</a></li>
                     <li class="nav-item"><a class="nav-link" href="#services">Usługi</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#guarantee">Gwarancja</a></li>
                     <li class="nav-item"><a class="nav-link" href="#contact">Kontakt</a></li>
                 </ul>
             </div>
@@ -217,51 +187,65 @@
         </div>
     </section>
 
-   <!-- Sekcja Kontakt -->
-<section id="contact" class="contact-section py-5">
-    <div class="container">
-        <h2 class="text-center mb-5">Skontaktuj się z nami</h2>
-        <div class="row">
-            <div class="col-md-6">
-                <form action="https://formspree.io/f/xbllpbzk" method="POST">
-                    <div class="mb-3">
-                        <label for="name" class="form-label">Imię i nazwisko</label>
-                        <input type="text" class="form-control" id="name" name="name" required>
+    <!-- Sekcja Kontakt -->
+    <section id="contact" class="contact-section py-5">
+        <div class="container">
+            <h2 class="text-center mb-5">Skontaktuj się z nami</h2>
+            <div class="row">
+                <div class="col-md-6">
+                    <form action="https://formspree.io/f/xbllpbzk" method="POST">
+                        <div class="mb-3">
+                            <label for="name" class="form-label">Imię i nazwisko</label>
+                            <input type="text" class="form-control" id="name" name="name" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="email" class="form-label">Email</label>
+                            <input type="email" class="form-control" id="email" name="email" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="message" class="form-label">Wiadomość</label>
+                            <textarea class="form-control" id="message" name="message" rows="4" required></textarea>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Wyślij</button>
+                    </form>
+                </div>
+                <div class="col-md-6">
+                    <div class="contact-details">
+                        <h5>Dane kontaktowe</h5>
+                        <p><i class="fas fa-phone-alt"></i> <strong>Telefon:</strong> 666 062 948</p>
+                        <p><i class="fas fa-map-marker-alt"></i> <strong>Adres:</strong> Stronie 292, 34-604 Przyszowa</p>
+                        <p><i class="fas fa-envelope"></i> <strong>Email:</strong> <a href="mailto:hydro.spaw.zoo@gmail.com">hydro.spaw.zoo@gmail.com</a></p>
                     </div>
-                    <div class="mb-3">
-                        <label for="email" class="form-label">Email</label>
-                        <input type="email" class="form-control" id="email" name="email" required>
+                    <!-- Mapa Google z pinezką -->
+                    <div class="map-container mt-4">
+                        <iframe 
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2584.378730309711!2d20.53946320585406!3d49.6075137745326!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x473e098b56e6b1ff%3A0x9d63a5f636c4a1a0!2sStronie%20292%2C%2034-604%20Przyszowa!5e0!3m2!1spl!2spl!4v1711381200000" 
+                            width="100%" 
+                            height="300" 
+                            style="border:0;" 
+                            allowfullscreen="" 
+                            loading="lazy" 
+                            referrerpolicy="no-referrer-when-downgrade">
+                        </iframe>
                     </div>
-                    <div class="mb-3">
-                        <label for="message" class="form-label">Wiadomość</label>
-                        <textarea class="form-control" id="message" name="message" rows="4" required></textarea>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Wyślij</button>
-                </form>
-            </div>
-            <div class="col-md-6">
-                <div class="contact-details">
-                    <h5>Dane kontaktowe</h5>
-                    <p><i class="fas fa-phone-alt"></i> <strong>Telefon:</strong> 666 062 948</p>
-                    <p><i class="fas fa-map-marker-alt"></i> <strong>Adres:</strong> Stronie 292, 34-604 Przyszowa</p>
-                    <p><i class="fas fa-envelope"></i> <strong>Email:</strong> <a href="mailto:hydro.spaw.zoo@gmail.com">hydro.spaw.zoo@gmail.com</a></p>
                 </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
 
-    <!-- Stopka -->
+    <!-- Sekcja Kontakt -->
     <footer>
-        <p>© 2025 Hydro-Spaw | Wszystkie prawa zastrzeżone</p>
+        <p>&copy; 2025 Hydro-Spaw. Wszelkie prawa zastrzeżone.</p>
+        <a href="#">Polityka prywatności</a> | <a href="#">Regulamin</a>
     </footer>
 
-    <!-- Kontakt info bar -->
+    <!-- Kontakt Info -->
     <div class="contact-info-bar">
-        <a href="tel:+48 666 062 948">Zadzwoń</a> | <a href="mailto:hydro.spaw.zoo@gmail.com">Napisz email</a> | <a href="#contact">Formularz kontaktowy</a>
+        <a href="tel:+48666062948">Zadzwoń: 666 062 948</a>
+        <a href="mailto:hydro.spaw.zoo@gmail.com">hydro.spaw.zoo@gmail.com</a>
     </div>
 
-    <!-- Bootstrap JS, Popper.js -->
+    <!-- Skrypty -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
