--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm" data-aos="fade-down">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="images/firma1.jpg" alt="Logo Hydro-Spaw">
+                <img src="images/firma1.png" alt="Logo Hydro-Spaw">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
