--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
             padding: 10px 0;
         }
         .navbar-brand img {
-            height: 70px;
+            height: 90px;
+            max-height: 100px;
+            object-fit: contain;
         }
         .hero-section {
             background: url('images/huj.jpg') no-repeat center center/cover;
@@ -99,7 +101,8 @@
                 height: 150px;
             }
             .navbar-brand img {
-                height: 60px;
+                height: 70px;
+                max-height: 80px;
             }
             .contact-section .col-md-6 {
                 margin-bottom: 30px;
@@ -199,58 +202,50 @@
                             <input type="text" class="form-control" id="name" name="name" required>
                         </div>
                         <div class="mb-3">
-                            <label for="email" class="form-label">Email</label>
-                            <input type="email" class="form-control" id="email" name="email" required>
+                            <label for="email" class="form-label">Adres email</label>
+                            <input type="email" class="form-control" id="email" name="_replyto" required>
                         </div>
                         <div class="mb-3">
                             <label for="message" class="form-label">Wiadomość</label>
-                            <textarea class="form-control" id="message" name="message" rows="4" required></textarea>
+                            <textarea class="form-control" id="message" name="message" rows="5" required></textarea>
                         </div>
                         <button type="submit" class="btn btn-primary">Wyślij</button>
                     </form>
                 </div>
-                <div class="col-md-6">
-                    <div class="contact-details">
-                        <h5>Dane kontaktowe</h5>
-                        <p><i class="fas fa-phone-alt"></i> <strong>Telefon:</strong> 666 062 948</p>
-                        <p><i class="fas fa-map-marker-alt"></i> <strong>Adres:</strong> Stronie 292, 34-604 Przyszowa</p>
-                        <p><i class="fas fa-envelope"></i> <strong>Email:</strong> <a href="mailto:hydro.spaw.zoo@gmail.com">hydro.spaw.zoo@gmail.com</a></p>
-                    </div>
-                    <!-- Mapa Google z pinezką -->
-                    <div class="map-container mt-4">
-                        <iframe 
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2584.378730309711!2d20.53946320585406!3d49.6075137745326!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x473e098b56e6b1ff%3A0x9d63a5f636c4a1a0!2sStronie%20292%2C%2034-604%20Przyszowa!5e0!3m2!1spl!2spl!4v1711381200000" 
-                            width="100%" 
-                            height="300" 
-                            style="border:0;" 
-                            allowfullscreen="" 
-                            loading="lazy" 
-                            referrerpolicy="no-referrer-when-downgrade">
-                        </iframe>
-                    </div>
+                <div class="col-md-6 contact-details">
+                    <h5>Kontakt telefoniczny</h5>
+                    <p><i class="fas fa-phone-alt"></i> <a href="tel:+48666062948">666 062 948</a></p>
+                    <h5>Adres</h5>
+                    <p>Powiat limanowski, Małopolska, Polska</p>
+                    <h5>Email</h5>
+                    <p><i class="fas fa-envelope"></i> <a href="mailto:kontakt@hydro-spaw.pl">kontakt@hydro-spaw.pl</a></p>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- Sekcja Kontakt -->
-    <footer>
-        <p>&copy; 2025 Hydro-Spaw. Wszelkie prawa zastrzeżone.</p>
-        <a href="#">Polityka prywatności</a> | <a href="#">Regulamin</a>
-    </footer>
-
-    <!-- Kontakt Info -->
+    <!-- Pasek kontaktowy na górze -->
     <div class="contact-info-bar">
-        <a href="tel:+48666062948">Zadzwoń: 666 062 948</a>
-        <a href="mailto:hydro.spaw.zoo@gmail.com">hydro.spaw.zoo@gmail.com</a>
+        <a href="tel:+48666062948"><i class="fas fa-phone-alt"></i> 666 062 948</a>
+        <a href="mailto:kontakt@hydro-spaw.pl"><i class="fas fa-envelope"></i> kontakt@hydro-spaw.pl</a>
     </div>
 
-    <!-- Skrypty -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
+    <!-- Stopka -->
+    <footer>
+        <div class="container">
+            <p>&copy; 2025 Hydro-Spaw. Wszelkie prawa zastrzeżone.</p>
+        </div>
+    </footer>
+
+    <!-- Bootstrap JS + AOS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
     <script>
-        AOS.init();
+        AOS.init({
+            duration: 800,
+            once: true,
+        });
     </script>
 </body>
 </html>
+
