--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Hydro-Spaw to firma z doświadczeniem w usługach hydraulicznych i spawalniczych. Oferujemy kompleksowe usługi na terenie powiatu limanowskiego w Małopolsce oraz całej Polski. Kontakt: 666 062 948">
-    <meta name="keywords" content="hydraulika, usługi spawalnicze, spawanie rur, Limanowa, instalacje hydrauliczne, konserwacja instalacji, Hydro-Spaw">
-    <meta name="author" content="Hydro-Spaw">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Hydro-Spaw to firma z doświadczeniem w usługach hydraulicznych i spawalniczych. Oferujemy kompleksowe usługi na terenie powiatu limanowskiego w Małopolsce oraz całej Polski. Kontakt: 666 062 948" />
+    <meta name="keywords" content="hydraulika, usługi spawalnicze, spawanie rur, Limanowa, instalacje hydrauliczne, konserwacja instalacji, Hydro-Spaw" />
+    <meta name="author" content="Hydro-Spaw" />
     <title>Hydro-Spaw | Usługi Hydrauliczne i Spawalnicze</title>
 
     <!-- Favicon -->
-    <link rel="icon" href="images/favicon.png" type="image/png">
+    <link rel="icon" href="images/favicon.png" type="image/png" />
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet" />
     <!-- AOS Animation CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet" />
     <!-- Custom CSS -->
     <style>
         body {
@@ -26,9 +26,10 @@
             padding: 10px 0;
         }
         .navbar-brand img {
-            height: 90px;
-            max-height: 100px;
+            height: 180px; /* POWIĘKSZONE LOGO */
+            max-height: 200px;
             object-fit: contain;
+            transition: height 0.3s ease;
         }
         .hero-section {
             background: url('images/huj.jpg') no-repeat center center/cover;
@@ -101,8 +102,8 @@
                 height: 150px;
             }
             .navbar-brand img {
-                height: 70px;
-                max-height: 80px;
+                height: 120px; /* Zmniejszone dla mniejszych ekranów */
+                max-height: 140px;
             }
             .contact-section .col-md-6 {
                 margin-bottom: 30px;
@@ -115,9 +116,10 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm" data-aos="fade-down">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="images/firma1.png" alt="Logo Hydro-Spaw">
+                <img src="images/firma1.png" alt="Logo Hydro-Spaw" />
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" 
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
@@ -148,7 +150,7 @@
                     <p>Firma <strong>Hydro-Spaw</strong> oferuje kompleksowe usługi hydrauliczne i spawalnicze. Specjalizujemy się w montażu, naprawach oraz konserwacji instalacji hydraulicznych i spawalniczych. Działamy na terenie powiatu limanowskiego w Małopolsce, jak również świadczymy usługi na terenie całej Polski. Gwarantujemy najwyższą jakość, profesjonalizm i solidność. Założyciel firmy, Przemysław Sułkowski, posiada wieloletnie doświadczenie w branży.</p>
                 </div>
                 <div class="col-md-6">
-                    <img src="images/firma5.jpg" alt="O nas" class="img-fluid rounded" data-aos="fade-left">
+                    <img src="images/firma5.jpg" alt="O nas" class="img-fluid rounded" data-aos="fade-left" />
                 </div>
             </div>
         </div>
@@ -161,7 +163,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="card">
-                        <img src="images/firma4.jpg" class="card-img-top" alt="Hydraulika">
+                        <img src="images/firma4.jpg" class="card-img-top" alt="Hydraulika" />
                         <div class="card-body">
                             <h5 class="card-title">Usługi hydrauliczne</h5>
                             <p class="card-text">Specjalizujemy się w montażu, naprawach i konserwacji instalacji hydraulicznych.</p>
@@ -170,7 +172,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="card">
-                        <img src="images/firma2.jpg" class="card-img-top" alt="Spawalnictwo">
+                        <img src="images/firma2.jpg" class="card-img-top" alt="Spawalnictwo" />
                         <div class="card-body">
                             <h5 class="card-title">Usługi spawalnicze</h5>
                             <p class="card-text">Oferujemy kompleksowe usługi spawalnicze, wykonujemy spawanie w różnych technikach.</p>
@@ -179,7 +181,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="card">
-                        <img src="images/firma3.jpg" class="card-img-top" alt="Serwis">
+                        <img src="images/firma3.jpg" class="card-img-top" alt="Serwis" />
                         <div class="card-body">
                             <h5 class="card-title">Serwis i konserwacja</h5>
                             <p class="card-text">Zajmujemy się serwisem i konserwacją instalacji sanitarnych.</p>
@@ -199,11 +201,11 @@
                     <form action="https://formspree.io/f/xbllpbzk" method="POST">
                         <div class="mb-3">
                             <label for="name" class="form-label">Imię i nazwisko</label>
-                            <input type="text" class="form-control" id="name" name="name" required>
+                            <input type="text" class="form-control" id="name" name="name" required />
                         </div>
                         <div class="mb-3">
                             <label for="email" class="form-label">Adres email</label>
-                            <input type="email" class="form-control" id="email" name="_replyto" required>
+                            <input type="email" class="form-control" id="email" name="_replyto" required />
                         </div>
                         <div class="mb-3">
                             <label for="message" class="form-label">Wiadomość</label>
