--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Hydro-Spaw to firma z doświadczeniem w usługach hydraulicznych i spawalniczych. Oferujemy kompleksowe usługi na terenie powiatu limanowskiego w Małopolsce oraz całej Polski. Kontakt: 666 062 948" />
-    <meta name="keywords" content="hydraulika, usługi spawalnicze, spawanie rur, Limanowa, instalacje hydrauliczne, konserwacja instalacji, Hydro-Spaw" />
-    <meta name="author" content="Hydro-Spaw" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Hydro-Spaw to firma z doświadczeniem w usługach hydraulicznych i spawalniczych. Oferujemy kompleksowe usługi na terenie powiatu limanowskiego w Małopolsce oraz całej Polski. Kontakt: 666 062 948">
+    <meta name="keywords" content="hydraulika, usługi spawalnicze, spawanie rur, Limanowa, instalacje hydrauliczne, konserwacja instalacji, Hydro-Spaw">
+    <meta name="author" content="Hydro-Spaw">
     <title>Hydro-Spaw | Usługi Hydrauliczne i Spawalnicze</title>
 
     <!-- Favicon -->
-    <link rel="icon" href="images/favicon.png" type="image/png" />
+    <link rel="icon" href="images/favicon.png" type="image/png">
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <!-- AOS Animation CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
     <!-- Custom CSS -->
     <style>
         body {
@@ -26,20 +26,13 @@
             padding: 10px 0;
         }
         .navbar-brand img {
-            height: 90px;
-            max-height: 100px;
-            object-fit: contain;
+            height: 70px;
         }
         .hero-section {
             background: url('images/huj.jpg') no-repeat center center/cover;
             color: #fff;
             text-align: center;
-            padding: 80px 20px;
-            height: 500px;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
+            padding: 100px 20px;
         }
         .hero-section h1 {
             font-size: 2.5rem;
@@ -71,22 +64,17 @@
             color: #fff;
             text-decoration: none;
         }
-        /* Pasek kontaktowy na górze - poprawiony */
         .contact-info-bar {
             background-color: #23272b;
             color: #fff;
             text-align: center;
-            padding: 8px 0;
-            font-size: 0.9rem;
-            display: flex;
-            justify-content: center;
-            gap: 30px;
-            align-items: center;
+            padding: 15px 0;
+            font-size: 1rem;
         }
         .contact-info-bar a {
             color: #fff;
             text-decoration: none;
-            margin: 0;
+            margin: 0 15px;
         }
         .contact-section form {
             max-width: 600px;
@@ -101,10 +89,6 @@
 
         /* Responsywność */
         @media (max-width: 768px) {
-            .hero-section {
-                height: 350px;
-                padding: 40px 10px;
-            }
             .hero-section h1 {
                 font-size: 2rem;
             }
@@ -115,43 +99,22 @@
                 height: 150px;
             }
             .navbar-brand img {
-                height: 70px;
-                max-height: 80px;
+                height: 60px;
             }
             .contact-section .col-md-6 {
                 margin-bottom: 30px;
-            }
-            /* Pasek kontaktowy responsywny */
-            .contact-info-bar {
-                flex-direction: column;
-                gap: 8px;
-                font-size: 0.85rem;
             }
         }
     </style>
 </head>
 <body>
-    <!-- Pasek kontaktowy na górze -->
-    <div class="contact-info-bar">
-        <a href="tel:+48666062948"><i class="fas fa-phone-alt"></i> 666 062 948</a>
-        <a href="mailto:kontakt@hydro-spaw.pl"><i class="fas fa-envelope"></i> kontakt@hydro-spaw.pl</a>
-    </div>
-
     <!-- Nawigacja -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm" data-aos="fade-down">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="images/firma1.png" alt="Logo Hydro-Spaw" />
+                <img src="images/firma1.png" alt="Logo Hydro-Spaw">
             </a>
-            <button
-                class="navbar-toggler"
-                type="button"
-                data-bs-toggle="collapse"
-                data-bs-target="#navbarNav"
-                aria-controls="navbarNav"
-                aria-expanded="false"
-                aria-label="Toggle navigation"
-            >
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
@@ -179,16 +142,10 @@
             <div class="row align-items-center">
                 <div class="col-md-6">
                     <h2>O nas</h2>
-                    <p>
-                        Firma <strong>Hydro-Spaw</strong> oferuje kompleksowe usługi hydrauliczne i spawalnicze. Specjalizujemy się
-                        w montażu, naprawach oraz konserwacji instalacji hydraulicznych i spawalniczych. Działamy na terenie
-                        powiatu limanowskiego w Małopolsce, jak również świadczymy usługi na terenie całej Polski. Gwarantujemy
-                        najwyższą jakość, profesjonalizm i solidność. Założyciel firmy, Przemysław Sułkowski, posiada
-                        wieloletnie doświadczenie w branży.
-                    </p>
+                    <p>Firma <strong>Hydro-Spaw</strong> oferuje kompleksowe usługi hydrauliczne i spawalnicze. Specjalizujemy się w montażu, naprawach oraz konserwacji instalacji hydraulicznych i spawalniczych. Działamy na terenie powiatu limanowskiego w Małopolsce, jak również świadczymy usługi na terenie całej Polski. Gwarantujemy najwyższą jakość, profesjonalizm i solidność. Założyciel firmy, Przemysław Sułkowski, posiada wieloletnie doświadczenie w branży.</p>
                 </div>
                 <div class="col-md-6">
-                    <img src="images/firma5.jpg" alt="O nas" class="img-fluid rounded" data-aos="fade-left" />
+                    <img src="images/firma5.jpg" alt="O nas" class="img-fluid rounded" data-aos="fade-left">
                 </div>
             </div>
         </div>
@@ -201,7 +158,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="card">
-                        <img src="images/firma4.jpg" class="card-img-top" alt="Hydraulika" />
+                        <img src="images/firma4.jpg" class="card-img-top" alt="Hydraulika">
                         <div class="card-body">
                             <h5 class="card-title">Usługi hydrauliczne</h5>
                             <p class="card-text">Specjalizujemy się w montażu, naprawach i konserwacji instalacji hydraulicznych.</p>
@@ -210,7 +167,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="card">
-                        <img src="images/firma2.jpg" class="card-img-top" alt="Spawalnictwo" />
+                        <img src="images/firma2.jpg" class="card-img-top" alt="Spawalnictwo">
                         <div class="card-body">
                             <h5 class="card-title">Usługi spawalnicze</h5>
                             <p class="card-text">Oferujemy kompleksowe usługi spawalnicze, wykonujemy spawanie w różnych technikach.</p>
@@ -219,7 +176,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="card">
-                        <img src="images/firma3.jpg" class="card-img-top" alt="Serwis" />
+                        <img src="images/firma3.jpg" class="card-img-top" alt="Serwis">
                         <div class="card-body">
                             <h5 class="card-title">Serwis i konserwacja</h5>
                             <p class="card-text">Zajmujemy się serwisem i konserwacją instalacji sanitarnych.</p>
@@ -239,46 +196,61 @@
                     <form action="https://formspree.io/f/xbllpbzk" method="POST">
                         <div class="mb-3">
                             <label for="name" class="form-label">Imię i nazwisko</label>
-                            <input type="text" class="form-control" id="name" name="name" required />
+                            <input type="text" class="form-control" id="name" name="name" required>
                         </div>
                         <div class="mb-3">
-                            <label for="email" class="form-label">Adres email</label>
-                            <input type="email" class="form-control" id="email" name="_replyto" required />
+                            <label for="email" class="form-label">Email</label>
+                            <input type="email" class="form-control" id="email" name="email" required>
                         </div>
                         <div class="mb-3">
                             <label for="message" class="form-label">Wiadomość</label>
-                            <textarea class="form-control" id="message" name="message" rows="5" required></textarea>
+                            <textarea class="form-control" id="message" name="message" rows="4" required></textarea>
                         </div>
                         <button type="submit" class="btn btn-primary">Wyślij</button>
                     </form>
                 </div>
-                <div class="col-md-6 contact-details">
-                    <h5>Kontakt telefoniczny</h5>
-                    <p><i class="fas fa-phone-alt"></i> <a href="tel:+48666062948">666 062 948</a></p>
-                    <h5>Adres</h5>
-                    <p>Powiat limanowski, Małopolska, Polska</p>
-                    <h5>Email</h5>
-                    <p><i class="fas fa-envelope"></i> <a href="mailto:kontakt@hydro-spaw.pl">kontakt@hydro-spaw.pl</a></p>
+                <div class="col-md-6">
+                    <div class="contact-details">
+                        <h5>Dane kontaktowe</h5>
+                        <p><i class="fas fa-phone-alt"></i> <strong>Telefon:</strong> 666 062 948</p>
+                        <p><i class="fas fa-map-marker-alt"></i> <strong>Adres:</strong> Stronie 292, 34-604 Przyszowa</p>
+                        <p><i class="fas fa-envelope"></i> <strong>Email:</strong> <a href="mailto:hydro.spaw.zoo@gmail.com">hydro.spaw.zoo@gmail.com</a></p>
+                    </div>
+                    <!-- Mapa Google z pinezką -->
+                    <div class="map-container mt-4">
+                        <iframe 
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2584.378730309711!2d20.53946320585406!3d49.6075137745326!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x473e098b56e6b1ff%3A0x9d63a5f636c4a1a0!2sStronie%20292%2C%2034-604%20Przyszowa!5e0!3m2!1spl!2spl!4v1711381200000" 
+                            width="100%" 
+                            height="300" 
+                            style="border:0;" 
+                            allowfullscreen="" 
+                            loading="lazy" 
+                            referrerpolicy="no-referrer-when-downgrade">
+                        </iframe>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- Stopka -->
+    <!-- Sekcja Kontakt -->
     <footer>
-        <div class="container">
-            <p>&copy; 2025 Hydro-Spaw. Wszelkie prawa zastrzeżone.</p>
-        </div>
+        <p>&copy; 2025 Hydro-Spaw. Wszelkie prawa zastrzeżone.</p>
+        <a href="#">Polityka prywatności</a> | <a href="#">Regulamin</a>
     </footer>
 
-    <!-- Bootstrap JS + AOS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Kontakt Info -->
+    <div class="contact-info-bar">
+        <a href="tel:+48666062948">Zadzwoń: 666 062 948</a>
+        <a href="mailto:hydro.spaw.zoo@gmail.com">hydro.spaw.zoo@gmail.com</a>
+    </div>
+
+    <!-- Skrypty -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
     <script>
-        AOS.init({
-            duration: 800,
-            once: true,
-        });
+        AOS.init();
     </script>
 </body>
 </html>
